--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Zip Build
         run: |
           cd dist
-          zip -r ../arena-plus-extension.zip .
+          zip -r ../arena-plus-extension-dist.zip .
           cd ..
 
       - name: Create Release
@@ -40,7 +40,7 @@ jobs:
         uses: softprops/action-gh-release@v2
         if: startsWith(github.ref, 'refs/tags/')
         with:
-          files: arena-plus-extension.zip
+          files: arena-plus-extension-dist.zip
           draft: false
           prerelease: false
           generate_release_notes: true
